gccida/g2/strength_reduce
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5449:4: error: expected ';' after expression
rtx v51; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5449:5: error: use of undeclared identifier 'v51'
rtx v51; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5453:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5453:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5460:4: error: expected ';' after expression
rtx v62; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5460:5: error: use of undeclared identifier 'v62'
rtx v62; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5469:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5469:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5476:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5476:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5478:6: error: use of undeclared identifier 'v80'
rtx *v80; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5484:4: error: expected ';' after expression
rtx v86; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5484:5: error: use of undeclared identifier 'v86'
rtx v86; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5494:4: error: expected ';' after expression
rtx v96; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5494:5: error: use of undeclared identifier 'v96'
rtx v96; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5507:4: error: expected ';' after expression
rtx n; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5507:5: error: use of undeclared identifier 'n'
rtx n; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5508:4: error: expected ';' after expression
rtx v110; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/loop.c:5508:5: error: use of undeclared identifier 'v110'
rtx v110; // rsi 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/strength_reduce/src/obj/loop.o] Error 1
